# AirQualityManager2

./: CMakeLists.txt  Doxyfile  MapWidget.cpp  MapWidget.h  README.md  airqualitymanager.cpp  airqualitymanager.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  tests.cpp
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_2c74a20069e2d3daad673be0033a40ec.html  dir_2df4671dbdcfd75d90e78c0f580d7b0d.html  dir_2df4671dbdcfd75d90e78c0f580d7b0d.js  dir_48326d6c605cdba1bc7a23e404b72ace.html  dir_48326d6c605cdba1bc7a23e404b72ace.js  dir_4851ee6edffe66be91969c00a0e9612c.html  dir_4851ee6edffe66be91969c00a0e9612c.js  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5bf4626483ec5719077f509189e1f2c9.html  dir_5bf4626483ec5719077f509189e1f2c9.js  dir_640b022120b83de44c34d1916a19875a.html  dir_640b022120b83de44c34d1916a19875a.js  dir_6e8de751a4770b8ceb74519d5bfa2096.html  dir_73e2ca9ade4b3e2483d7ea0dcd0f029c.html  dir_7b48216e7d32a15009a32c8c58d447b4.html  dir_7b48216e7d32a15009a32c8c58d447b4.js  dir_7c54cebf1e8586a5628d2a0d6be0c5dd.html  dir_7c54cebf1e8586a5628d2a0d6be0c5dd.js  dir_be4115aaa3f8da67a9aab446d7a40df3.html  dir_be4115aaa3f8da67a9aab446d7a40df3.js  dir_d9cb75a63b63862f85424fec7c5e061f.html  dir_d9cb75a63b63862f85424fec7c5e061f.js  dir_fbccac2dd2d9828a3bf04744f6d590c0.html  dir_fbccac2dd2d9828a3bf04744f6d590c0.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_a.html  globals_c.html  globals_d.html  globals_defs.html  globals_defs_a.html  globals_defs_c.html  (+32 more)
(+162 files in other folders)
